[fix] rollup-plugin-jay override noEmit flag to false
Problem
With noEmit: false, jay typesrcipt plugin does not generate the *.jay.html.ts files,
then typescript plugin fails on
import { render } from "app.jay.html.ts"

Solution
Override the noEmit flag to false.

--- a/packages/rollup-plugin/package.json
+++ b/packages/rollup-plugin/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "jay-compiler": "workspace:^",
+    "lodash": "^4.17.21",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4",
     "@types/node": "^20.9.2",
     "jay-dev-environment": "workspace:^",
     "tsup": "^8.0.0",
