--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,7 @@
 checksumBehavior: update
 
+compressionLevel: mixed
+
 enableGlobalCache: true
 
 enableTelemetry: 0
@@ -10,16 +12,11 @@ nodeLinker: node-modules
 
 npmAuthToken: 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
 
-npmRegistryServer: 'https://registry.yarnpkg.com'
+npmMinimalAgeGate: 14d
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: '@yarnpkg/plugin-workspace-tools'
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: '@yarnpkg/plugin-typescript'
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: '@yarnpkg/plugin-version'
+npmPreapprovedPackages:
+  - '@wix/*'
 
-yarnPath: .yarn/releases/yarn-3.6.4.cjs
+npmRegistryServer: 'https://registry.npmjs.org'
+
+yarnPath: .yarn/releases/yarn-4.12.0.cjs
