--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -18,3 +18,5 @@ npmPreapprovedPackages:
   - '@wix/*'
 
 npmRegistryServer: 'https://registry.npmjs.org'
+
+yarnPath: .yarn/releases/yarn-4.12.0.cjs
