--- a/packages/jay-stack/stack-client-runtime/package.json
+++ b/packages/jay-stack/stack-client-runtime/package.json
@@ -30,6 +30,7 @@
     "@jay-framework/component": "workspace:^",
     "@jay-framework/fullstack-component": "workspace:^",
     "@jay-framework/runtime": "workspace:^",
+    "@jay-framework/runtime-automation": "workspace:^",
     "@jay-framework/view-state-merge": "workspace:^"
   },
   "devDependencies": {
