--- a/packages/jay-stack/route-scanner/package.json
+++ b/packages/jay-stack/route-scanner/package.json
@@ -2,7 +2,7 @@
   "name": "@jay-framework/stack-route-scanner",
   "version": "0.12.0",
   "license": "Apache-2.0",
-  "main": "dist/index.js",
+  "main": "dist/index.mjs",
   "types": "dist/index.d.mts",
   "files": [
     "dist",
