--- a/packages/jay-stack/route-scanner/package.json
+++ b/packages/jay-stack/route-scanner/package.json
@@ -1,9 +1,16 @@
 {
   "name": "@jay-framework/stack-route-scanner",
   "version": "0.12.0",
+  "type": "module",
   "license": "Apache-2.0",
   "main": "dist/index.mjs",
   "types": "dist/index.d.mts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.mts"
+    }
+  },
   "files": [
     "dist",
     "readme.md"
@@ -12,10 +19,11 @@
     "@jay-framework/logger": "workspace:^"
   },
   "scripts": {
-    "build": "npm run build:js && npm run build:types",
+    "build": "npm run build:js && npm run build:types && npm run build:rename",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
+    "build:rename": "[ -f dist/index.js ] && mv dist/index.js dist/index.mjs || true; [ -f dist/index.d.ts ] && mv dist/index.d.ts dist/index.d.mts || true",
     "build:check-types": "tsc",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
