--- a/packages/jay-stack-plugins/webmcp/tsconfig.json
+++ b/packages/jay-stack-plugins/webmcp/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@jay-framework/dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
-  }
+    "outDir": "dist",
+  },
 }
